efi/bootlog: Introduce bootlog support
In edk2 patch set https://edk2.groups.io/g/devel/message/90067, we
introduce a new mechanism to pass in-memory log files from firmware to
an OS. These log files include time stamps and can get created by any
component in the early boot system.

This patch adds Linux support to expose the logs to user space. It
creates a "bootlog" directory in /sys/firmware/efi that contains one
file per log producer. The patch set referenced above contains an
example python script that can convert these binary logs into human
readable output.

Signed-off-by: Alexander Graf <graf@amazon.com>

--- a/drivers/firmware/efi/Kconfig
+++ b/drivers/firmware/efi/Kconfig
@@ -287,6 +287,13 @@ config EFI_EMBEDDED_FIRMWARE
 	bool
 	select CRYPTO_LIB_SHA256
 
+config EFI_BOOTLOG
+	bool
+	depends on EFI
+	default y
+	help
+	  Enable exposure of pre-Linux boot logs via sysfs in /sys/firmware/bootlog
+
 endmenu
 
 config UEFI_CPER
